test/error/PreElseElif2.fu
public static class Test
{
	public static bool Run()
	{
#if true
		return true;
#else
#elif true //ERROR: '#elif' after '#else'
#endif
	}
}
